--- a/seleniumPractice/AmazonMavenProject/test-output/old/Default suite/methods.html
+++ b/seleniumPractice/AmazonMavenProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3d869">  <td>24/11/17 16:10:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchQuit.launch()[pri:0, instance:test.TestCase5@8f2ef19]">&gt;&gt;launch</td> 
+<tr bgcolor="72a8b5">  <td>24/11/17 23:23:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchQuit.launch()[pri:0, instance:test.TestCase2@659499f1]">&gt;&gt;launch</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="79b2da">  <td>24/11/17 16:10:50</td>   <td>4153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.remove_fromcart_fromWishList_logout()[pri:0, instance:test.TestCase5@8f2ef19]">remove_fromcart_fromWishList_logout</td> 
+<tr bgcolor="72a8b5">  <td>24/11/17 23:23:33</td>   <td>7637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchQuit.quit()[pri:0, instance:test.TestCase2@659499f1]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="99a379">  <td>24/11/17 23:23:33</td>   <td>7626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.loginSerachLogoutFromamazon()[pri:0, instance:test.TestCase2@659499f1]">loginSerachLogoutFromamazon</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="b3d869">  <td>24/11/17 16:11:15</td>   <td>28746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchQuit.quit()[pri:0, instance:test.TestCase5@8f2ef19]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
